Details
-
Bug
-
Resolution: Done
-
P0: Blocker
-
5.9.0 Alpha
-
None
-
-
231ca3adc48d1980b9cd14840df832a72d642e79
Description
https://codereview.qt-project.org/#/c/184202/
http://testresults.qt.io/coin/integration/qt/qt5/tasks/1486634192
http://testresults.qt.io/logs/qt/qtmacextras/8907d81734988a6140ca82aa925100e828d1b8e5/OSXOSX_10_10x86_64IOSIOS_ANYx86_64Clangqtci-osx-10.10-x86_64-71d782Release_DisableTests_Static/9e5b2d3d990207a816f8da4ac8f76966c0845890/buildlog.txt.gz
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang++ -c -Xarch_i386 -include.pch/Qt5MacExtras/objective-c++_i386 -Xarch_x86_64 -include.pch/Qt5MacExtras/objective-c++_x86_64 -pipe -stdlib=libc++ -mfpmath=sse -O2 -fPIC -std=c++1z -fapplication-extension -arch i386 -arch x86_64 -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator9.2.sdk -mios-simulator-version-min=8.0 -fobjc-nonfragile-abi -fobjc-legacy-dispatch -fvisibility=hidden -fvisibility-inlines-hidden -fno-exceptions -fembed-bitcode-marker -Wall -W -DQT_NO_FOREACH -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_BUILD_MACEXTRAS_LIB -DQT_BUILDING_QT -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_BEFORE=0x050000 -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -DQT_GUI_LIB -DQT_CORE_LIB -DQT_GUI_LIB -DQT_CORE_LIB -I. -I/Users/qt/work/install/mkspecs/common/uikit -I. -I../../include -I../../include/QtMacExtras -I../../include/QtMacExtras/5.9.0 -I../../include/QtMacExtras/5.9.0/QtMacExtras -I/Users/qt/work/install/include -I/Users/qt/work/install/include/QtGui -I/Users/qt/work/install/include/QtCore -I/Users/qt/work/install/include/QtGui/5.9.0 -I/Users/qt/work/install/include/QtGui/5.9.0/QtGui -I/Users/qt/work/install/include/QtCore/5.9.0 -I/Users/qt/work/install/include/QtCore/5.9.0/QtCore -I.moc -I/Users/qt/work/install/mkspecs/macx-ios-clang -o .obj/qmacfunctions_ios.o qmacfunctions_ios.mm qmacfunctions_ios.mm:66:21: error: 'sharedApplication' is unavailable: not available on iOS (App Extension) - Use view controller based solutions where appropriate instead. /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator9.2.sdk/System/Library/Frameworks/UIKit.framework/Headers/UIApplication.h:105:1: note: 'sharedApplication' has been explicitly marked unavailable here qmacfunctions_ios.mm:78:28: error: 'sharedApplication' is unavailable: not available on iOS (App Extension) - Use view controller based solutions where appropriate instead. make[2]: *** [.obj/qmacfunctions_ios.o] Error 1 make[1]: *** [sub-macextras-make_first] Error 2 make: *** [sub-src-make_first] Error 2
And it didn't happen in qt5 5.8
http://testresults.qt.io/coin/integration/qt/qt5/tasks/1486563302