Properly fix unavailable APIs in App Extensions error

This reverts 20d1d8d097333ec6d13a0dd0c46aeab1bdacb50a.

Task-number: QTBUG-58743
Change-Id: I1ec803948246889bb4aed1a0d934fdc6918cb52d
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>